public/css/site.css
@import "tailwindcss";

@theme {
    --accent: #2490ba;
    --color-accent: var(--accent);
}

:root {
    color-scheme: light;
}

body.page-photo header {
    @apply hidden md:flex;
}

.avatar-squircle {
    clip-path: url(#squircle);
}

@supports (height: 100dvh) {
     .container.min-h-screen {
          min-height: 100dvh;
     }
}

